--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "helmet": "^8.1.0",
     "mongoose": "^9.0.0",
     "morgan": "^1.10.1",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
