--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
+NODE_ENV=development
 MONGODB_URI=mongodb+srv://shubhamlonkar137_db_user:e9km9tp6Q7rdjbju@cluster0.zv3zhoi.mongodb.net/?appName=Cluster0
