--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "helmet": "^8.1.0",
     "mongoose": "^9.0.0",
     "morgan": "^1.10.1",
+    "node-cache": "^5.1.2",
     "uuid": "^13.0.0",
     "ws": "^8.18.3"
   },
