--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ JWT_SECRET=your_jwt_secret_key_here
 
 # CORS
 ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
+
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-app-password 
