--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^9.0.0",
     "morgan": "^1.10.1",
     "node-cache": "^5.1.2",
+    "nodemailer": "^7.0.11",
     "uuid": "^13.0.0",
     "ws": "^8.18.3"
   },
