--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^5.1.0",
     "geofencer": "^1.0.2",
     "helmet": "^8.1.0",
+    "mailtrap": "^4.3.2",
     "mongoose": "^9.0.0",
     "morgan": "^1.10.1",
     "node-cache": "^5.1.2",
